--- a/packages/downloader/package.json
+++ b/packages/downloader/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "check-url-type": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
+    "download": "^8.0.0",
     "fs-extra": "^9.0.1",
+    "is-relative-url": "^3.0.0",
     "lodash": "^4.17.20"
   },
   "devDependencies": {
