--- a/packages/downloader/package.json
+++ b/packages/downloader/package.json
@@ -15,7 +15,8 @@
     "fs-extra": "^9.0.1",
     "is-relative-url": "^3.0.0",
     "lodash": "^4.17.20",
-    "replace-css-url": "^1.2.6"
+    "replace-css-url": "^1.2.6",
+    "srcset": "^3.0.0"
   },
   "devDependencies": {
     "serve": "^11.3.2"
