--- a/packages/downloader/package.json
+++ b/packages/downloader/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@smarterlabs/downloader",
+  "name": "@app/downloader",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "scripts": {
     "clean": "del-cli dist",
