--- a/package.json
+++ b/package.json
@@ -7,15 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "lerna run build --stream",
-    "clean": "lerna run clean --stream --no-sort",
-    "dev": "yarn dev:sandbox",
-    "dev:all": "yarn run build && lerna run dev --parallel --stream --no-sort",
-    "dev:sandbox": "cd packages/sandbox && yarn dev",
-    "lint": "eslint ./",
-    "lint:fix": "eslint ./ --fix",
-    "publish": "yarn build && lerna publish from-package --yes",
-    "serve": "lerna run serve --stream --no-sort",
+    "build": "cd packages/orchestration && npm run build",
+    "clean": "del dist",
+    "serve": "cd packages/orchestration && npm run serve",
     "stop": "sudo killall -9 node",
     "version": "lerna version"
   },
@@ -37,7 +31,7 @@
     "@babel/core": "^7.8.3",
     "@smarterlabs/babel-preset": "^1.0.8",
     "@smarterlabs/eslint-config": "^1.0.7",
-    "del-cli": "^3.0.0",
+    "del-cli": "^4.0.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.0",
     "lerna": "^3.20.2",
