--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "scripts": {
     "build": "cd packages/orchestration && npm run build",
     "clean": "del dist",
-    "serve": "cd packages/orchestration && npm run serve",
+    "serve": "serve dist",
     "stop": "sudo killall -9 node",
+    "test": "URL=https://smarterlabs.com/ SOURCE_URL=https://business-starter-template.webflow.io/ yarn build",
     "version": "lerna version"
   },
   "husky": {
@@ -37,6 +38,7 @@
     "lerna": "^3.20.2",
     "lint-staged": "^10.0.2",
     "npm-run-all": "^4.1.5",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "serve": "^12.0.0"
   }
 }
