--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "cd packages/orchestration && npm run build",
+    "build": "yarn run clean && cd packages/orchestration && dotenv -e ../../.env -- npm run build",
     "clean": "del dist",
     "serve": "serve dist",
     "stop": "sudo killall -9 node",
-    "test": "URL=https://smarterlabs.com/ SOURCE_URL=https://business-starter-template.webflow.io/ yarn build",
     "version": "lerna version"
   },
   "husky": {
@@ -33,6 +32,7 @@
     "@smarterlabs/babel-preset": "^1.0.8",
     "@smarterlabs/eslint-config": "^1.0.7",
     "del-cli": "^4.0.0",
+    "dotenv-cli": "^4.0.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.0",
     "lerna": "^3.20.2",
