--- a/packages/downloader/package.json
+++ b/packages/downloader/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@app/downloader",
   "version": "1.0.0",
+  "license": "PURCHASE AT cryolayer.com",
   "main": "src/index.js",
   "scripts": {
     "clean": "del-cli dist",
