--- a/packages/orchestration/package.json
+++ b/packages/orchestration/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@app/orchestration",
   "version": "1.0.0",
+  "license": "PURCHASE AT cryolayer.com",
   "main": "src/index.js",
   "scripts": {
     "build": "node src/index",
