--- a/packages/orchestration/package.json
+++ b/packages/orchestration/package.json
@@ -8,7 +8,10 @@
     "serve": "serve dist"
   },
   "dependencies": {
-    "@app/downloader": "*"
+    "@app/downloader": "*",
+    "cheerio": "^1.0.0-rc.10",
+    "fs-extra": "^10.0.0",
+    "globby": "^11.0.4"
   },
   "devDependencies": {
     "del-cli": "^4.0.0",
