--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "husky": "^4.2.0",
     "lerna": "^3.20.2",
     "lint-staged": "^10.0.2",
+    "netlify-plugin-image-optim": "^0.4.0",
+    "netlify-plugin-inline-critical-css": "^1.2.0",
+    "netlify-plugin-subfont": "^6.0.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "serve": "^12.0.0"
