--- a/packages/webflow-plugin/package.json
+++ b/packages/webflow-plugin/package.json
@@ -12,9 +12,11 @@
     "fs-extra": "^10.0.0",
     "globby": "^11.0.4",
     "lodash": "^4.17.21",
+    "postcss": "^8.3.5",
     "posthtml": "^0.16.4",
     "posthtml-webp": "^2.1.0",
-    "webp-converter": "^2.3.3"
+    "webp-converter": "^2.3.3",
+    "webp-in-css": "^0.6.0"
   },
   "devDependencies": {
     "del-cli": "^4.0.0",
