--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "fixed",
+  "version": null,
   "npmClient": "yarn",
   "useWorkspaces": true
 }
