--- a/packages/webflow-plugin/package.json
+++ b/packages/webflow-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@app/webflow-plugin",
-  "version": "1.0.0",
+  "version": null,
   "license": "PURCHASE AT cryolayer.com",
   "main": "src/index.js",
   "scripts": {
