--- a/packages/downloader/package.json
+++ b/packages/downloader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@app/downloader",
-  "version": null,
+  "version": "1.0.0",
   "license": "PURCHASE AT cryolayer.com",
   "main": "src/index.js",
   "scripts": {
