yarn in Netlify by default

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   command = "yarn build"
   publish = "dist/"
+[build.environment]
+  NETLIFY_USE_YARN = true
 
 [template]
   incoming-hooks = ["Webflow"]
