--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,9 @@
 [template.environment]
   WEBFLOW_URL = ""
 
+# [[plugins]]
+# package = "netlify-plugin-subfont"
+
 [[plugins]]
 package = "netlify-plugin-image-optim"
 
