--- a/packages/webflow-plugin/package.json
+++ b/packages/webflow-plugin/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.10",
+    "critical": "^4.0.1",
     "fs-extra": "^10.0.0",
     "globby": "^11.0.4",
     "lodash": "^4.17.21",
+    "netlify-plugin-image-optim": "^0.4.0",
     "postcss": "^8.3.5",
     "posthtml": "^0.16.4",
     "posthtml-webp": "^2.1.0",
