--- a/packages/webflow-plugin/package.json
+++ b/packages/webflow-plugin/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "node src/index",
-    "serve": "serve dist"
+    "serve": "serve public"
   },
   "dependencies": {
     "axios": "^0.21.1",
